# PyMesh3D

./: LICENSE  README  README.md  Use-Cases.md  pyproject.toml  requirements.txt  setup.py  test.py
polymesh-ai/: __init__.py  debugging.py  mesh_attention.py  mesh_library.py  mesh_training_pipeline.py  mesh_transformers.py  test.py
pymesh3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
