[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymesh3d"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Transformer Library for 3D Mesh Processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["3d", "mesh", "transformer", "deep-learning", "pytorch", "computer-vision"]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
full = [
    "wandb>=0.15.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "jupyter>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pymesh3d"
Repository = "https://github.com/yourusername/pymesh3d"
Documentation = "https://pymesh3d.readthedocs.io/"
"Bug Tracker" = "https://github.com/yourusername/pymesh3d/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymesh3d*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]